added content to page

--- a/dealers_styles.css
+++ b/dealers_styles.css
@@ -1,6 +1,6 @@
 body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 0;
+  margin: 20px;
 }
 .nav {
   list-style-type: none;
@@ -33,13 +33,34 @@ a:visited {
    text-decoration: none;
  }
 
- @media (max-width: 600px) {
+ .first_post div{ 
+  display: flex;
+  align-items: center;
+}
+
+.first_post p, .post p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.5em;
+}
+
+
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  color: white;
+  background-color: black;
+}
+
+a:visited {
+  color: white;
+}
+
+@media (max-width: 600px) {
    .nav {
     flex-direction: column;
    }
- }
-
- .main-grid{
-   display: flex;
-   justify-content: center;
  }
