--- a/dealers_styles.css
+++ b/dealers_styles.css
@@ -1,33 +1,46 @@
 body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 20px;
+  color: black;
+  margin: 40px;
 }
+
 .nav {
   list-style-type: none;
   padding: 0;
   display: flex;
-  background-color: black;
+  background-color: rgb(2, 2, 2);
   align-items: center;
-  
-}
+  width: 100%;
+  height: 40px;
+  }
 
 .nav li {
   flex: 1;
   justify-content: center;
-  color: white;
- 
-}
-
-.nav li:first-child {
-  text-transform: uppercase;
-  font-size: 25px;
-  color: blue;
-}
-
-a:visited { 
-  text-decoration: none; 
-  color: white; 
+  color: rgb(133, 130, 103);
  }
+
+ .nav a {
+  font-size: 1.3em;
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+}
+.nav a:hover {
+  color: #202b47;
+  background-color: #fff;
+  box-shadow: #d3d3d3;
+}
+
+.nav a {
+  font-size: 1.3em;
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+  transition: color 1s, background-color 0.5s;
+}
 
  a {
    text-decoration: none;
@@ -35,20 +48,29 @@ a:visited {
 
  .first_post div{ 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .first_post p, .post p {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family:  sans-serif;
   font-size: 1.5em;
 }
 
-
-
-img {
-  max-width: 100%;
-  height: auto;
+.first_post p {
+  margin: 20px;
 }
+
+.first_post img {
+  display:block;
+  position:relative;
+  overflow:hidden;/*keeps the image in the container*/
+  height: 800px;
+  width: 75%;
+  margin:20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 a {
   color: white;
@@ -57,6 +79,57 @@ a {
 
 a:visited {
   color: white;
+}
+
+.first_post h1 {
+  font-size: 80px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.post img {
+  position:relative;
+  overflow:hidden;/*keeps the image in the container*/
+  height: 450px;
+  width: 700px;
+  margin:20px
+}
+
+#carousel {
+  height: 100vh; text-align: center; 
+ }
+
+#carousel img {
+  height: 100%; width: 100%; 
+ }
+
+#carousel .carousel-image {
+  position: absolute; display: block; margin: auto; min-width: 100%; height: 100%; opacity: 1; transition: opacity 1.5s; 
+ } 
+
+#carousel .carousel-image.hidden {
+  opacity: 0; 
+ }
+
+#carousel-text {
+ position: absolute; top: 40%; width: 100%; color: white; font-size: 1.5em; text-shadow: 2px 2px black; z-index: 1; 
+}
+
+header {
+  display: flex;
+  position: fixed;
+  z-index: 3;
+}
+
+header {
+  width: 100%;
+  border-radius: 0em 0em 2em 2em;
+  transform: translateY(-4em);
+  transition: transform 0.5s;
+}
+
+header.active {
+  transform: translateY(0);
 }
 
 @media (max-width: 600px) {
