--- a/dealers_styles.css
+++ b/dealers_styles.css
@@ -73,10 +73,8 @@ a:visited {
 
 .post img {
   height: 450px;
-  width: 50%;
+  width: 30%;
 }
-
-
 
 #carousel {
   height: 100vh; text-align: center; 
@@ -95,7 +93,7 @@ a:visited {
  }
 
 #carousel-text {
- position: absolute; top: 40%; width: 100%; color: white; font-size: 1.5em; text-shadow: 2px 2px black; z-index: 1; 
+ position: absolute; top: 40%; width: 100%; color: white; font-size: 2.5em; text-shadow: 2px 2px black; z-index: 1; 
 }
 
 header {
@@ -113,6 +111,10 @@ header {
 
 header.active {
   transform: translateY(0);
+}
+
+footer{
+  text-align: center;
 }
 
 @media (max-width: 600px) {
